# transactions-analytics

./: .gitignore  .replit  main.py  pyproject.toml  replit.md
backend/: __init__.py
backend/app/: main.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo  config.json
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-production/: index.pack
frontend/.next/cache/webpack/edge-server-production/: index.pack
frontend/.next/cache/webpack/server-production/: index.pack
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/app/: layout.js  page.js
frontend/.next/static/css/app/: layout.css
frontend/app/: layout.tsx  page.tsx
frontend/components/: FileUpload.tsx  TransactionTable.tsx
src/: app.py
